--- a/MDI_metadynamics/CMakeLists.txt
+++ b/MDI_metadynamics/CMakeLists.txt
@@ -20,7 +20,7 @@ include_directories(${MDI_LOCATION})
 # Compile the driver
 
 add_executable(MDI_metadynamics
-	MDI_metadynamics.cpp CollectiveVariable.h)
+	MDI_metadynamics.cpp Utils.h CollectiveVariable.h)
 target_link_libraries(MDI_metadynamics mdi
                       ${MPI_LIBRARIES})
 
